y.output
   0  $accept : program $end

   1  program : definitions usercode

   2  definitions : crowd_definitions park_definition crowd_definitions

   3  crowd_definitions : crowd_definitions crowd_definition
   4                    | empty

   5  usercode : start

   6  crowd_definition : Crowd crowd_name crowd_elements

   7  crowd_elements : SEMICOLON
   8                 | crowd_attributes

   9  crowd_attributes : crowd_attributes crowd_attribute
  10                   | empty

  11  crowd_attribute : c1
  12                  | c2
  13                  | c3
  14                  | c4

  15  c1 : Set SpendingCapacity NUMBER SEMICOLON

  16  c2 : Set Size NUMBER SEMICOLON

  17  c3 : Set EnergyLevel NUMBER SEMICOLON

  18  c4 : Set ThrillLevel NUMBER SEMICOLON

  19  park_definition : Park park_name park_elements land_definitions

  20  park_elements : SEMICOLON
  21                | park_attributes

  22  park_attributes : park_attributes park_attribute
  23                  | empty

  24  park_attribute : p1
  25                 | p2
  26                 | p3

  27  p1 : Set Admission NUMBER SEMICOLON

  28  p2 : Set Capacity NUMBER SEMICOLON

  29  p3 : Set Cost NUMBER SEMICOLON

  30  land_definitions : land_definitions land_definition
  31                   | empty

  32  land_definition : Land land_name land_attributes land_elements

  33  land_attributes : SEMICOLON
  34                  | Set Location NUMBER SEMICOLON

  35  land_elements : land_elements land_element
  36                | empty

  37  land_element : attraction_definition
  38               | restaurant_definition
  39               | store_definition

  40  attraction_definition : Attraction attraction_name In land_name attraction_attributes

  41  attraction_attributes : SEMICOLON
  42                        | attraction_attributes attraction_attribute
  43                        | empty

  44  attraction_attribute : a1
  45                       | a2
  46                       | a3
  47                       | a4
  48                       | a5

  49  a1 : Set Cost NUMBER SEMICOLON

  50  a2 : Set Capacity NUMBER SEMICOLON

  51  a3 : Set Employees NUMBER SEMICOLON

  52  a4 : Set ThrillLevel NUMBER SEMICOLON

  53  a5 : Set EnergyLost NUMBER SEMICOLON

  54  restaurant_definition : Restaurant restaurant_name In land_name restaurant_attributes

  55  restaurant_attributes : SEMICOLON
  56                        | restaurant_attributes restaurant_attribute
  57                        | empty

  58  restaurant_attribute : r1
  59                       | r2
  60                       | r3
  61                       | r4
  62                       | r5

  63  r1 : Set Cost NUMBER SEMICOLON

  64  r2 : Set Capacity NUMBER SEMICOLON

  65  r3 : Set Employees NUMBER SEMICOLON

  66  r4 : Set SpendLevel NUMBER SEMICOLON

  67  r5 : Set EnergyIncrease NUMBER SEMICOLON

  68  store_definition : Store store_name In land_name store_attributes

  69  store_attributes : SEMICOLON
  70                   | store_attributes store_attribute
  71                   | empty

  72  store_attribute : s1
  73                  | s2
  74                  | s3
  75                  | s4

  76  s1 : Set Cost NUMBER SEMICOLON

  77  s2 : Set Capacity NUMBER SEMICOLON

  78  s3 : Set Employees NUMBER SEMICOLON

  79  s4 : Set SpendLevel NUMBER SEMICOLON

  80  start : Start COLON block

  81  function : return_type function_name COLON actual_parameters block function
  82           | empty

  83  return_type : Number
  84              | String
  85              | empty

  86  actual_parameters : data_type variable_name actual_parameter
  87                    | empty

  88  actual_parameter : COMMA actual_parameters
  89                   | empty

  90  block : start_block statements end_block

  91  start_block : OPEN_PARAN

  92  end_block : CLOSE_PARAN

  93  statements : statements statement
  94             | empty

  95  statement : add_attraction_attribute
  96            | add_crowd_attribute
  97            | add_restaurant_attribute
  98            | add_store_attribute
  99            | assignment
 100            | condition
 101            | declaration
 102            | function_call
 103            | initialization
 104            | thrill_functions

 105  add_attraction_attribute : Set Cost value In attraction_name SEMICOLON
 106                           | Set Capacity value In attraction_name SEMICOLON
 107                           | Set Employees value In attraction_name SEMICOLON
 108                           | Set ThrillLevel value In attraction_name SEMICOLON
 109                           | Set EnergyLost value In attraction_name SEMICOLON

 110  add_crowd_attribute : Set Size value In crowd_name SEMICOLON
 111                      | Set EnergyLevel value In crowd_name SEMICOLON
 112                      | Set ThrillLevel value In crowd_name SEMICOLON
 113                      | Set SpendingCapacity value In crowd_name SEMICOLON

 114  add_restaurant_attribute : Set Cost value In restaurant_name SEMICOLON
 115                           | Set Capacity value In restaurant_name SEMICOLON
 116                           | Set Employees value In restaurant_name SEMICOLON
 117                           | Set SpendLevel value In restaurant_name SEMICOLON
 118                           | Set EnergyIncrease value In restaurant_name SEMICOLON

 119  add_store_attribute : Set Cost value In store_name SEMICOLON
 120                      | Set Capacity value In store_name SEMICOLON
 121                      | Set Employees value In store_name SEMICOLON
 122                      | Set SpendLevel value In store_name SEMICOLON

 123  assignment : left_side EQUAL right_side

 124  left_side : variable_name

 125  right_side : arithmetic_expression SEMICOLON
 126             | function_call

 127  arithmetic_expression : arithmetic_expression PLUS arithmetic_expression
 128                        | arithmetic_expression MINUS arithmetic_expression
 129                        | arithmetic_expression MUL arithmetic_expression
 130                        | arithmetic_expression DIV arithmetic_expression
 131                        | OPEN arithmetic_expression CLOSE
 132                        | variable_name
 133                        | constant

 134  condition : If OPEN relational_expression CLOSE block
 135            | If OPEN relational_expression CLOSE block Else block

 136  relational_expression : relational_expression LESSEQUAL relational_expression
 137                        | relational_expression GREATEQUAL relational_expression
 138                        | relational_expression NOTEQUAL relational_expression
 139                        | relational_expression LESS relational_expression
 140                        | relational_expression GREAT relational_expression
 141                        | OPEN relational_expression CLOSE
 142                        | variable_name
 143                        | constant

 144  declaration : primitive_type declaration_list

 145  declaration_list : variable_name COMMA declaration_list
 146                   | variable_name SEMICOLON

 147  function_call : function_name COLON formal_parameters SEMICOLON

 148  formal_parameters : variable_name formal_parameter
 149                    | empty

 150  formal_parameter : COMMA formal_parameters
 151                   | empty

 152  initialization : primitive_type initialization_list

 153  initialization_list : variable_name EQUAL constant SEMICOLON
 154                      | variable_name EQUAL constant COMMA initialization_list

 155  thrill_functions : calculate_revenue
 156                   | output
 157                   | simulate

 158  calculate_revenue : CalculateRevenue COLON Crowd crowd_name COMMA Duration duration_type

 159  duration_type : Days
 160                | Weeks
 161                | Months
 162                | Years

 163  output : Print constant_variable_chain

 164  simulate : Simulate COLON SEMICOLON

 165  constant_variable_chain : constant_or_variable PLUS constant_variable_chain
 166                          | constant_or_variable

 167  constant_or_variable : constant
 168                       | variable_name

 169  data_type : complex_type
 170            | primitive_type

 171  complex_type : Crowd
 172               | Duration

 173  primitive_type : Number
 174                 | String

 175  constant : NUMBER
 176           | Quote ID Quote

 177  value : NUMBER
 178        | variable_name

 179  attraction_name : ID

 180  crowd_name : ID

 181  function_name : ID

 182  land_name : ID

 183  park_name : ID

 184  restaurant_name : ID

 185  store_name : ID

 186  variable_name : ID

 187  empty :

state 0
	$accept : . program $end  (0)
	empty : .  (187)

	.  reduce 187

	program  goto 1
	definitions  goto 2
	crowd_definitions  goto 3
	empty  goto 4


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : definitions . usercode  (1)

	Start  shift 5
	.  error

	usercode  goto 6
	start  goto 7


state 3
	definitions : crowd_definitions . park_definition crowd_definitions  (2)
	crowd_definitions : crowd_definitions . crowd_definition  (3)

	Crowd  shift 8
	Park  shift 9
	.  error

	park_definition  goto 10
	crowd_definition  goto 11


state 4
	crowd_definitions : empty .  (4)

	.  reduce 4


state 5
	start : Start . COLON block  (80)

	COLON  shift 12
	.  error


state 6
	program : definitions usercode .  (1)

	.  reduce 1


state 7
	usercode : start .  (5)

	.  reduce 5


state 8
	crowd_definition : Crowd . crowd_name crowd_elements  (6)

	ID  shift 13
	.  error

	crowd_name  goto 14


state 9
	park_definition : Park . park_name park_elements land_definitions  (19)

	ID  shift 15
	.  error

	park_name  goto 16


state 10
	definitions : crowd_definitions park_definition . crowd_definitions  (2)
	empty : .  (187)

	.  reduce 187

	crowd_definitions  goto 17
	empty  goto 4


state 11
	crowd_definitions : crowd_definitions crowd_definition .  (3)

	.  reduce 3


state 12
	start : Start COLON . block  (80)

	OPEN_PARAN  shift 18
	.  error

	block  goto 19
	start_block  goto 20


state 13
	crowd_name : ID .  (180)

	.  reduce 180


state 14
	crowd_definition : Crowd crowd_name . crowd_elements  (6)
	empty : .  (187)

	SEMICOLON  shift 21
	Crowd  reduce 187
	Park  reduce 187
	Set  reduce 187
	Start  reduce 187

	empty  goto 22
	crowd_elements  goto 23
	crowd_attributes  goto 24


state 15
	park_name : ID .  (183)

	.  reduce 183


state 16
	park_definition : Park park_name . park_elements land_definitions  (19)
	empty : .  (187)

	SEMICOLON  shift 25
	Crowd  reduce 187
	Land  reduce 187
	Set  reduce 187
	Start  reduce 187

	empty  goto 26
	park_elements  goto 27
	park_attributes  goto 28


state 17
	definitions : crowd_definitions park_definition crowd_definitions .  (2)
	crowd_definitions : crowd_definitions . crowd_definition  (3)

	Crowd  shift 8
	Start  reduce 2

	crowd_definition  goto 11


state 18
	start_block : OPEN_PARAN .  (91)

	.  reduce 91


state 19
	start : Start COLON block .  (80)

	.  reduce 80


state 20
	block : start_block . statements end_block  (90)
	empty : .  (187)

	.  reduce 187

	empty  goto 29
	statements  goto 30


state 21
	crowd_elements : SEMICOLON .  (7)

	.  reduce 7


state 22
	crowd_attributes : empty .  (10)

	.  reduce 10


state 23
	crowd_definition : Crowd crowd_name crowd_elements .  (6)

	.  reduce 6


state 24
	crowd_elements : crowd_attributes .  (8)
	crowd_attributes : crowd_attributes . crowd_attribute  (9)

	Set  shift 31
	Crowd  reduce 8
	Park  reduce 8
	Start  reduce 8

	crowd_attribute  goto 32
	c1  goto 33
	c2  goto 34
	c3  goto 35
	c4  goto 36


state 25
	park_elements : SEMICOLON .  (20)

	.  reduce 20


state 26
	park_attributes : empty .  (23)

	.  reduce 23


state 27
	park_definition : Park park_name park_elements . land_definitions  (19)
	empty : .  (187)

	.  reduce 187

	empty  goto 37
	land_definitions  goto 38


state 28
	park_elements : park_attributes .  (21)
	park_attributes : park_attributes . park_attribute  (22)

	Set  shift 39
	Crowd  reduce 21
	Land  reduce 21
	Start  reduce 21

	park_attribute  goto 40
	p1  goto 41
	p2  goto 42
	p3  goto 43


state 29
	statements : empty .  (94)

	.  reduce 94


state 30
	block : start_block statements . end_block  (90)
	statements : statements . statement  (93)

	ID  shift 44
	CLOSE_PARAN  shift 45
	If  shift 46
	Number  shift 47
	Set  shift 48
	String  shift 49
	CalculateRevenue  shift 50
	Print  shift 51
	Simulate  shift 52
	.  error

	function_name  goto 53
	variable_name  goto 54
	end_block  goto 55
	statement  goto 56
	add_attraction_attribute  goto 57
	add_crowd_attribute  goto 58
	add_restaurant_attribute  goto 59
	add_store_attribute  goto 60
	assignment  goto 61
	condition  goto 62
	declaration  goto 63
	function_call  goto 64
	initialization  goto 65
	thrill_functions  goto 66
	left_side  goto 67
	primitive_type  goto 68
	calculate_revenue  goto 69
	output  goto 70
	simulate  goto 71


state 31
	c1 : Set . SpendingCapacity NUMBER SEMICOLON  (15)
	c2 : Set . Size NUMBER SEMICOLON  (16)
	c3 : Set . EnergyLevel NUMBER SEMICOLON  (17)
	c4 : Set . ThrillLevel NUMBER SEMICOLON  (18)

	EnergyLevel  shift 72
	Size  shift 73
	SpendingCapacity  shift 74
	ThrillLevel  shift 75
	.  error


state 32
	crowd_attributes : crowd_attributes crowd_attribute .  (9)

	.  reduce 9


state 33
	crowd_attribute : c1 .  (11)

	.  reduce 11


state 34
	crowd_attribute : c2 .  (12)

	.  reduce 12


state 35
	crowd_attribute : c3 .  (13)

	.  reduce 13


state 36
	crowd_attribute : c4 .  (14)

	.  reduce 14


state 37
	land_definitions : empty .  (31)

	.  reduce 31


state 38
	park_definition : Park park_name park_elements land_definitions .  (19)
	land_definitions : land_definitions . land_definition  (30)

	Land  shift 76
	Crowd  reduce 19
	Start  reduce 19

	land_definition  goto 77


state 39
	p1 : Set . Admission NUMBER SEMICOLON  (27)
	p2 : Set . Capacity NUMBER SEMICOLON  (28)
	p3 : Set . Cost NUMBER SEMICOLON  (29)

	Admission  shift 78
	Capacity  shift 79
	Cost  shift 80
	.  error


state 40
	park_attributes : park_attributes park_attribute .  (22)

	.  reduce 22


state 41
	park_attribute : p1 .  (24)

	.  reduce 24


state 42
	park_attribute : p2 .  (25)

	.  reduce 25


state 43
	park_attribute : p3 .  (26)

	.  reduce 26


state 44
	function_name : ID .  (181)
	variable_name : ID .  (186)

	SEMICOLON  reduce 186
	COLON  reduce 181
	EQUAL  reduce 186
	PLUS  reduce 186
	MINUS  reduce 186
	MUL  reduce 186
	DIV  reduce 186


state 45
	end_block : CLOSE_PARAN .  (92)

	.  reduce 92


state 46
	condition : If . OPEN relational_expression CLOSE block  (134)
	condition : If . OPEN relational_expression CLOSE block Else block  (135)

	OPEN  shift 81
	.  error


state 47
	primitive_type : Number .  (173)

	.  reduce 173


state 48
	add_attraction_attribute : Set . Cost value In attraction_name SEMICOLON  (105)
	add_attraction_attribute : Set . Capacity value In attraction_name SEMICOLON  (106)
	add_attraction_attribute : Set . Employees value In attraction_name SEMICOLON  (107)
	add_attraction_attribute : Set . ThrillLevel value In attraction_name SEMICOLON  (108)
	add_attraction_attribute : Set . EnergyLost value In attraction_name SEMICOLON  (109)
	add_crowd_attribute : Set . Size value In crowd_name SEMICOLON  (110)
	add_crowd_attribute : Set . EnergyLevel value In crowd_name SEMICOLON  (111)
	add_crowd_attribute : Set . ThrillLevel value In crowd_name SEMICOLON  (112)
	add_crowd_attribute : Set . SpendingCapacity value In crowd_name SEMICOLON  (113)
	add_restaurant_attribute : Set . Cost value In restaurant_name SEMICOLON  (114)
	add_restaurant_attribute : Set . Capacity value In restaurant_name SEMICOLON  (115)
	add_restaurant_attribute : Set . Employees value In restaurant_name SEMICOLON  (116)
	add_restaurant_attribute : Set . SpendLevel value In restaurant_name SEMICOLON  (117)
	add_restaurant_attribute : Set . EnergyIncrease value In restaurant_name SEMICOLON  (118)
	add_store_attribute : Set . Cost value In store_name SEMICOLON  (119)
	add_store_attribute : Set . Capacity value In store_name SEMICOLON  (120)
	add_store_attribute : Set . Employees value In store_name SEMICOLON  (121)
	add_store_attribute : Set . SpendLevel value In store_name SEMICOLON  (122)

	Capacity  shift 82
	Cost  shift 83
	Employees  shift 84
	EnergyIncrease  shift 85
	EnergyLevel  shift 86
	EnergyLost  shift 87
	Size  shift 88
	SpendLevel  shift 89
	SpendingCapacity  shift 90
	ThrillLevel  shift 91
	.  error


state 49
	primitive_type : String .  (174)

	.  reduce 174


state 50
	calculate_revenue : CalculateRevenue . COLON Crowd crowd_name COMMA Duration duration_type  (158)

	COLON  shift 92
	.  error


state 51
	output : Print . constant_variable_chain  (163)

	NUMBER  shift 93
	ID  shift 94
	Quote  shift 95
	.  error

	variable_name  goto 96
	constant  goto 97
	constant_variable_chain  goto 98
	constant_or_variable  goto 99


state 52
	simulate : Simulate . COLON SEMICOLON  (164)

	COLON  shift 100
	.  error


state 53
	function_call : function_name . COLON formal_parameters SEMICOLON  (147)

	COLON  shift 101
	.  error


state 54
	left_side : variable_name .  (124)

	.  reduce 124


state 55
	block : start_block statements end_block .  (90)

	.  reduce 90


state 56
	statements : statements statement .  (93)

	.  reduce 93


state 57
	statement : add_attraction_attribute .  (95)

	.  reduce 95


state 58
	statement : add_crowd_attribute .  (96)

	.  reduce 96


state 59
	statement : add_restaurant_attribute .  (97)

	.  reduce 97


state 60
	statement : add_store_attribute .  (98)

	.  reduce 98


state 61
	statement : assignment .  (99)

	.  reduce 99


state 62
	statement : condition .  (100)

	.  reduce 100


state 63
	statement : declaration .  (101)

	.  reduce 101


state 64
	statement : function_call .  (102)

	.  reduce 102


state 65
	statement : initialization .  (103)

	.  reduce 103


state 66
	statement : thrill_functions .  (104)

	.  reduce 104


state 67
	assignment : left_side . EQUAL right_side  (123)

	EQUAL  shift 102
	.  error


state 68
	declaration : primitive_type . declaration_list  (144)
	initialization : primitive_type . initialization_list  (152)

	ID  shift 94
	.  error

	variable_name  goto 103
	declaration_list  goto 104
	initialization_list  goto 105


state 69
	thrill_functions : calculate_revenue .  (155)

	.  reduce 155


state 70
	thrill_functions : output .  (156)

	.  reduce 156


state 71
	thrill_functions : simulate .  (157)

	.  reduce 157


state 72
	c3 : Set EnergyLevel . NUMBER SEMICOLON  (17)

	NUMBER  shift 106
	.  error


state 73
	c2 : Set Size . NUMBER SEMICOLON  (16)

	NUMBER  shift 107
	.  error


state 74
	c1 : Set SpendingCapacity . NUMBER SEMICOLON  (15)

	NUMBER  shift 108
	.  error


state 75
	c4 : Set ThrillLevel . NUMBER SEMICOLON  (18)

	NUMBER  shift 109
	.  error


state 76
	land_definition : Land . land_name land_attributes land_elements  (32)

	ID  shift 110
	.  error

	land_name  goto 111


state 77
	land_definitions : land_definitions land_definition .  (30)

	.  reduce 30


state 78
	p1 : Set Admission . NUMBER SEMICOLON  (27)

	NUMBER  shift 112
	.  error


state 79
	p2 : Set Capacity . NUMBER SEMICOLON  (28)

	NUMBER  shift 113
	.  error


state 80
	p3 : Set Cost . NUMBER SEMICOLON  (29)

	NUMBER  shift 114
	.  error


state 81
	condition : If OPEN . relational_expression CLOSE block  (134)
	condition : If OPEN . relational_expression CLOSE block Else block  (135)

	NUMBER  shift 93
	ID  shift 94
	OPEN  shift 115
	Quote  shift 95
	.  error

	variable_name  goto 116
	constant  goto 117
	relational_expression  goto 118


state 82
	add_attraction_attribute : Set Capacity . value In attraction_name SEMICOLON  (106)
	add_restaurant_attribute : Set Capacity . value In restaurant_name SEMICOLON  (115)
	add_store_attribute : Set Capacity . value In store_name SEMICOLON  (120)

	NUMBER  shift 119
	ID  shift 94
	.  error

	variable_name  goto 120
	value  goto 121


state 83
	add_attraction_attribute : Set Cost . value In attraction_name SEMICOLON  (105)
	add_restaurant_attribute : Set Cost . value In restaurant_name SEMICOLON  (114)
	add_store_attribute : Set Cost . value In store_name SEMICOLON  (119)

	NUMBER  shift 119
	ID  shift 94
	.  error

	variable_name  goto 120
	value  goto 122


state 84
	add_attraction_attribute : Set Employees . value In attraction_name SEMICOLON  (107)
	add_restaurant_attribute : Set Employees . value In restaurant_name SEMICOLON  (116)
	add_store_attribute : Set Employees . value In store_name SEMICOLON  (121)

	NUMBER  shift 119
	ID  shift 94
	.  error

	variable_name  goto 120
	value  goto 123


state 85
	add_restaurant_attribute : Set EnergyIncrease . value In restaurant_name SEMICOLON  (118)

	NUMBER  shift 119
	ID  shift 94
	.  error

	variable_name  goto 120
	value  goto 124


state 86
	add_crowd_attribute : Set EnergyLevel . value In crowd_name SEMICOLON  (111)

	NUMBER  shift 119
	ID  shift 94
	.  error

	variable_name  goto 120
	value  goto 125


state 87
	add_attraction_attribute : Set EnergyLost . value In attraction_name SEMICOLON  (109)

	NUMBER  shift 119
	ID  shift 94
	.  error

	variable_name  goto 120
	value  goto 126


state 88
	add_crowd_attribute : Set Size . value In crowd_name SEMICOLON  (110)

	NUMBER  shift 119
	ID  shift 94
	.  error

	variable_name  goto 120
	value  goto 127


state 89
	add_restaurant_attribute : Set SpendLevel . value In restaurant_name SEMICOLON  (117)
	add_store_attribute : Set SpendLevel . value In store_name SEMICOLON  (122)

	NUMBER  shift 119
	ID  shift 94
	.  error

	variable_name  goto 120
	value  goto 128


state 90
	add_crowd_attribute : Set SpendingCapacity . value In crowd_name SEMICOLON  (113)

	NUMBER  shift 119
	ID  shift 94
	.  error

	variable_name  goto 120
	value  goto 129


state 91
	add_attraction_attribute : Set ThrillLevel . value In attraction_name SEMICOLON  (108)
	add_crowd_attribute : Set ThrillLevel . value In crowd_name SEMICOLON  (112)

	NUMBER  shift 119
	ID  shift 94
	.  error

	variable_name  goto 120
	value  goto 130


state 92
	calculate_revenue : CalculateRevenue COLON . Crowd crowd_name COMMA Duration duration_type  (158)

	Crowd  shift 131
	.  error


state 93
	constant : NUMBER .  (175)

	.  reduce 175


state 94
	variable_name : ID .  (186)

	.  reduce 186


state 95
	constant : Quote . ID Quote  (176)

	ID  shift 132
	.  error


state 96
	constant_or_variable : variable_name .  (168)

	.  reduce 168


state 97
	constant_or_variable : constant .  (167)

	.  reduce 167


state 98
	output : Print constant_variable_chain .  (163)

	.  reduce 163


state 99
	constant_variable_chain : constant_or_variable . PLUS constant_variable_chain  (165)
	constant_variable_chain : constant_or_variable .  (166)

	PLUS  shift 133
